modify atlas-release-2.1.0-rc3