@@ -32,10 +32,10 @@
 #export ATLAS_SERVER_OPTS=
 
 # indicative values for large number of metadata entities (equal or more than 10,000s)
-#export ATLAS_SERVER_OPTS="-server -XX:SoftRefLRUPolicyMSPerMB=0 -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+PrintTenuringDistribution -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=dumps/atlas_server.hprof -Xloggc:logs/gc-worker.log -verbose:gc -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=1m -XX:+PrintGCDetails -XX:+PrintHeapAtGC -XX:+PrintGCTimeStamps"
+#export ATLAS_SERVER_OPTS="ATLAS_OPTS"
 
 # java heap size we want to set for the atlas server. Default is 1024MB
-#export ATLAS_SERVER_HEAP=
+#export ATLAS_SERVER_HEAP="ATLAS_SERVER_JVM"
 
 # indicative values for large number of metadata entities (equal or more than 10,000s) for JDK 8
 #export ATLAS_SERVER_HEAP="-Xms15360m -Xmx15360m -XX:MaxNewSize=5120m -XX:MetaspaceSize=100M -XX:MaxMetaspaceSize=512m"
